# IACrux

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
cmake/: crux_setup_project.cmake  find_deps.cmake
cmake/toolchains/: arm64-linux-clang.cmake  arm64-windows-clang.cmake  wasm32-emscripten-clang.cmake  x64-linux-clang.cmake  x64-windows-clang.cmake  x64-windows-cross-clang.cmake
include/crux/: crux.hpp  env.hpp  io.hpp  logger.hpp  platform.hpp  unique_handle.hpp  utils.hpp
include/crux/adt/: ring_buffer.hpp
src/: CMakeLists.txt
src/cpp/: crux.cpp  env.cpp  logger.cpp  platform.cpp  utils.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  env.cpp  logger.cpp  main.cpp  platform.cpp  utils.cpp
